--- a/apps/toolbox-client/src/app/shared/chat/chat.component.html
+++ b/apps/toolbox-client/src/app/shared/chat/chat.component.html
@@ -2,6 +2,7 @@
 @for (chatRoom of activeChatRooms$ | async; track $index) {
     <app-chat-room
         [chatRoomInput]="chatRoom"
+        [chatRoomId]="chatRoom._id"
     ></app-chat-room>
 }
 
