--- a/apps/toolbox-client/src/app/pages/home/home.component.html
+++ b/apps/toolbox-client/src/app/pages/home/home.component.html
@@ -1,5 +1,7 @@
 <app-header/>
 
-<router-outlet></router-outlet>
+<div class="mt-4">
+    <router-outlet></router-outlet>
+</div>
 
 <app-chat></app-chat>
